Terminado, me quedo hasta bonito y todo

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,2 +1,11 @@
-<h1>{{title}}</h1>
-<p>Welcome to {{title}}</p>
+<div id="index">
+    <div class="title-home">
+    <h1>Cinema</h1>
+    <h1>Ironhack</h1>
+    </div>
+    
+
+  <a href="/movies/">
+    <button class="btn"> Check the movies!</button>
+  </a>
+</div>
