--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,8 +1,106 @@
 body {
   padding: 50px;
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+  background-image: url(../images/cinema.jpg);
+  background-size: cover;
+  background-repeat: no-repeat;
 }
 
 a {
   color: #00B7FF;
+}
+
+.btn {
+  padding: 15px 30px;
+  border: 1px solid #007bff;
+  border-radius: .90rem;
+  color: #007bff;
+  transition: color .15s ease-in-out;
+  margin-top: 40px;
+  margin-left: 50%;
+  transform: translateX(-50%);
+}
+
+.btn:hover, .btn:active, .btn:focus {
+  color: #fff;
+  background-color: #007bff;
+}
+
+#index{
+  float: right;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  
+}
+
+.title-home{
+  font-size: 50px;
+  display: flex;
+  flex-direction: column;
+  justify-content: start;
+  align-items: center;
+  margin: 5px;
+  color: white;
+  margin-bottom: 0px;
+  margin-top: 150px;
+
+}
+
+h1 {
+  display: block;
+  font-size: 2em;
+  margin-block-start: 0em;
+  margin-block-end: 0em;
+  margin-inline-start: 0px;
+  margin-inline-end: 0px;
+  font-weight: bold;
+  color: white;
+}
+h4 {
+  color: white;
+}
+
+.container-description {
+  font-size: 20px;
+  color: black;
+  margin-left: 400px;
+}
+
+
+.container-details {
+  display: flex;
+  flex-direction: row;
+  background-color: white;
+}
+
+#container-description {
+  display: flex;
+  flex-direction: column;
+  margin-left: 50px;
+}
+
+
+/* Movies list */
+
+#movies-list img {
+  width: 15vw;
+}
+
+#movies-list{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  flex-wrap: wrap;
+  flex-flow: row wrap;
+  align-content: flex-start;
+  
+}
+
+#eachMovie {
+  margin: 30px;
+  text-align: center;
+  background-color: white;
+  padding: 10px;
+
 }
